test/types/file/freadNoFloat.good
freadNoFloat.chpl:4: error: Unhandled system error: bad format (1002) in channel.read(inout a:real) with path freadNoFloat.txt offset 0
