test/types/file/freadNoFloat.chpl
var myFloat: real;
var f = open("freadNoFloat.txt", mode.r).reader();

f.read(myFloat);

